# Vault-Injector

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  linting.yaml  test.yaml
src/vault_injector/: __init__.py
src/vault_injector/destinations/: __init__.py  base.py  models.py
src/vault_injector/sources/: base.py  files.py
tests/: test_db_destination.py  test_json_source.py  test_vault_unseal.py
vault/config/: vault-config.json
