[project]
name = "vault_injector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hvac>=2.3.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_injector"]
packages-dir = "src"

[project.scripts]
v-inject = "vault_injector:main"
